[gd_scene load_steps=19 format=2]

[ext_resource path="res://models/laserbot/laserBot.glb" type="PackedScene" id=1]
[ext_resource path="res://laserbot.gd" type="Script" id=2]
[ext_resource path="res://laserParticles.tscn" type="PackedScene" id=3]
[ext_resource path="res://sfx/laser_disappear.ogg" type="AudioStream" id=4]
[ext_resource path="res://sfx/laser.ogg" type="AudioStream" id=5]
[ext_resource path="res://sfx/laser_charge_short.ogg" type="AudioStream" id=6]

[sub_resource type="Animation" id=1]
resource_name = "charge"
length = 1.55
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Head/LaserCharge:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0.45, 1.5, 0.45 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Head/LaserCharge:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0.764337, 0.816524, 0 ), Vector3( 1.23212, 0.784033, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Head/LaserCharge:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.55 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("LaserCharge:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
resource_name = "head_up_down"
length = 6.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Head:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, -22.8 ), Vector3( 0, 0, 7.869 ) ]
}

[sub_resource type="SpatialMaterial" id=12]
albedo_color = Color( 1, 0.00392157, 0.00392157, 1 )
emission_enabled = true
emission = Color( 1, 0, 0, 1 )
emission_energy = 4.31
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.964706, 0.172549, 0.172549, 1 )
emission_enabled = true
emission = Color( 1, 0, 0, 1 )
emission_energy = 7.94
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0.47486, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="Curve" id=6]
max_value = 0.5
_data = [ Vector2( 0.0168539, 0.123864 ), 0.0, 0.0, 0, 0, Vector2( 0.213483, 0.201136 ), 0.0, 0.0, 0, 0, Vector2( 0.617977, 0.205682 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]
curve = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=8]
lifetime_randomness = 0.26
emission_shape = 1
emission_sphere_radius = 0.15
spread = 72.06
gravity = Vector3( 0, 0, 0 )
initial_velocity = 5.0
linear_accel = 5.0
scale_curve = SubResource( 7 )
color_ramp = SubResource( 5 )

[sub_resource type="SpatialMaterial" id=9]
flags_unshaded = true
vertex_color_use_as_albedo = true
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="ParticlesMaterial" id=10]
lifetime_randomness = 0.26
emission_shape = 1
emission_sphere_radius = 2.0
spread = 59.07
gravity = Vector3( 0, 0, 0 )
radial_accel = -18.56
scale_curve = SubResource( 7 )
color_ramp = SubResource( 5 )

[sub_resource type="SphereMesh" id=11]
radius = 0.2
height = 0.4

[node name="laserbot" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="LaserParticles" parent="." index="0" instance=ExtResource( 3 )]
emitting = false
amount = 150

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="1"]
autoplay = "charge"
anims/charge = SubResource( 1 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="." index="2"]
anims/head_up_down = SubResource( 2 )

[node name="Tween" type="Tween" parent="." index="3"]

[node name="LaserTimer" type="Timer" parent="." index="4"]
wait_time = 3.0
autostart = true

[node name="LaserCharge" type="AudioStreamPlayer" parent="." index="5"]
stream = ExtResource( 6 )

[node name="LaserSound" type="AudioStreamPlayer" parent="." index="6"]
stream = ExtResource( 5 )

[node name="LaserDisappear" type="AudioStreamPlayer" parent="." index="7"]
stream = ExtResource( 4 )

[node name="Head" parent="." index="15"]
transform = Transform( 0.835879, 0.0974706, 0, -0.351371, 0.231873, 0, 0, 0, 0.906728, 0.00703901, 1.93761, 0.00129425 )

[node name="Ear_Left" parent="Head" index="0"]
transform = Transform( 0.165133, 0, 0, 0, 8.25565e-09, -0.595288, 0, 0.0461689, 1.06446e-07, -0.0975732, 0.58927, -0.525593 )

[node name="Laser" parent="Head" index="2"]
transform = Transform( 1.26754e-07, 0.157, 0, -0.651, 3.0569e-08, 0, 0, 0, 0.157, 0.890264, 0.812274, 0.00187191 )
material_override = SubResource( 12 )

[node name="RayCast" type="RayCast" parent="Head" index="17"]
transform = Transform( 1.10287, 0, 0, 0, 3.97572, 0, 0, 0, 1.10287, 0.893273, 0.741444, -0.00142738 )
enabled = true
cast_to = Vector3( 50, 0, 0 )

[node name="LaserCharge" type="CSGSphere" parent="Head" index="18"]
transform = Transform( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0.764337, 0.816524, 0 )
material = SubResource( 3 )

[node name="LaserParticlesEmission" parent="Head" index="19" instance=ExtResource( 3 )]
transform = Transform( 1.10287, 0, 0, 0, 3.97572, 0, 0, 0, 1.10287, 0.972036, 1.08861, -0.00142738 )
emitting = false
process_material = SubResource( 8 )

[node name="LaserParticlesCharge" parent="Head" index="20" instance=ExtResource( 3 )]
transform = Transform( -1.7968e-07, -1.10287, 0, 3.97572, -6.47728e-07, 0, 0, 0, 1.10287, 1.14511, 0.915684, -0.00142738 )
material_override = SubResource( 9 )
emitting = false
amount = 150
lifetime = 0.58
randomness = 0.44
process_material = SubResource( 10 )
draw_pass_1 = SubResource( 11 )
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="LaserTimer" to="." method="_on_LaserTimer_timeout"]
